--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<!--groupId / -->
 	<!--artifactId / -->
-	<artifactId>nhojpatrick-hamcrest-all</artifactId>
+	<artifactId>nhojpatrick-hamcrest-lang</artifactId>
 	<!--packaging / -->
 	<packaging>jar</packaging>
 	<!--name / -->
@@ -37,17 +37,18 @@
 
 		<dependency>
 			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-collections</artifactId>
+			<artifactId>nhojpatrick-hamcrest-testing</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.github.nhojpatrick.hamcrest</groupId>
-			<artifactId>nhojpatrick-hamcrest-lang</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -57,6 +58,6 @@
 	<!--distributionManagement / -->
 	<!--properties / -->
 	<properties>
-		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.all</project.Automatic-Module-Name>
+		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.lang</project.Automatic-Module-Name>
 	</properties>
 </project>
