--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -72,5 +72,7 @@
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.lang</project.Automatic-Module-Name>
 		<checkstyle.maxAllowedViolations>42</checkstyle.maxAllowedViolations>
+		<jacoco.bundle.class.missedcount>999</jacoco.bundle.class.missedcount>
+		<jacoco.bundle.line.coveredratio>0%</jacoco.bundle.line.coveredratio>
 	</properties>
 </project>
