--- a/lang/src/test/resources/log4j2.xml
+++ b/lang/src/test/resources/log4j2.xml
@@ -6,7 +6,7 @@
         </Console>
     </Appenders>
     <Loggers>
-        <Logger name="com.github.nhojpatrick.hamcrest.lang" level="debug">
+        <Logger name="com.github.nhojpatrick.hamcrest.lang" level="debug" additivity="false">
             <AppenderRef ref="Console"/>
         </Logger>
         <Root level="warn">
